<resources>
    <string name="app_name">LAPORin</string>
    <string name="login">Masuk</string>
    <string name="login_account">Masuk Akun</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="already_have_account">Belum Punya Akun?</string>
    <string name="new_user">Akun Baru?</string>
    <string name="create_account">Buat Akun</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="register">Daftar</string>
    <string name="register_title_1">Membuat</string>
    <string name="register_title_2">Akun Baru</string>
    <string name="fill_input">Tolong isi di input di bawah ini</string>
    <string name="satu_data">Satu Data</string>
    <string name="desc_satu_data">Temukan data Pemerintah dengan mudah!</string>
    <string name="kunjungi">Kunjungi</string>
    <string name="pusat_informasi_covid19">Pusat Informasi Covid19</string>
    <string name="desc_pusat_informasi_covid19">Temukan Informasi Covid19 Terkini</string>
    <string name="pusar_informasi_vaksinasi">Pusar Informasi Vaksinasi</string>
    <string name="desc_pusat_informasi_vaksinasi">Temukan Informasi Vaksinasi Terkini</string>
    <string name="l_a_p_o_r_i_n">L A P O R i n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_kejadian">Tanggal Kejadian</string>
    <string name="tipe_aduan">Tipe Aduan</string>
    <string name="lokasi">Lokasi</string>
    <string name="keterangan_kejadian">Keterangan Kejadian</string>
    <string name="laporkan">Laporkan</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="image_report">Image Report</string>
    <string name="kirim_aduan">Kirim Aduan</string>
    <string name="upload_gambar">Upload Gambar</string>
    <string name="laporkan_kejadian">Laporkan Kejadian</string>
    <string name="gambar_laporan">Gambar Laporan</string>

</resources>