<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgform"
    android:orientation="vertical"
    tools:context=".ui.ReportActivity">

    <TextView
        android:id="@+id/tv_laporkan_kejadian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/oswaldmedium"
        android:gravity="center"
        android:text="@string/laporkan_kejadian"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,ObsoleteLayoutParam" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:weightSum="10"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_desc"
            android:hint="@string/keterangan_kejadian" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:weightSum="10"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_place"
            android:hint="@string/lokasi" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_laporan"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/form"
            android:contentDescription="@string/gambar_laporan" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload_image"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_ev_form"
            android:fontFamily="@font/oswaldbold"
            android:text="@string/upload_gambar"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_upload_aduan"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_ev_form"
        android:fontFamily="@font/oswaldbold"
        android:text="@string/kirim_aduan"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_status_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="" />

</LinearLayout>